# phil

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  requirements.txt
cpp/: .gitignore  CMakeLists.txt  arm-toolchain.cmake  mocap_camera.cpp  tk1-toolchain.cmake  unwarp_fisheye.cpp
cpp/configs/: 1080p30_MJPG.yml  30fps_versus_60fps.yml  480p30_YUYV.yml  480p60_YUYV.yml  720p30_MJPG.yml  mocapbot.config  video0_480p30_MJPG.yml
cpp/configs/turtlebot_3_17_trial_0/: 49_dict.yml  config.yml  kobuki_data_03_17_11-10-13.csv  mocap_3_17-ps3eye1_2-cam.yml  mocap_3_17-ps3eye1_2.pcd  mocap_3_17-ps3eye1_2.yml  ps3eye_1_calib_3_16.yml  rio-data-263.255.csv  turtlebot_mocap_3_17 0.csv  video1_03_17_11-09-54  video2_03_17_11-09-48
cpp/dicts/: custom_dict_0-15.yml
cpp/include/phil/: phil.h  udp.h
cpp/include/phil/common/: common.h  math.h  pcdwriter.h  udp.h
cpp/include/phil/localization/: ekf.h  filter.h  localization.h  mobile_robot.h  nonlinearanalyticconditionalgaussianmobile.h  particle_filter.h  point_mass_robot_model.h  robot_model.h
cpp/include/phil/phil_rio/: phil_rio.h
cpp/libraries/: CMakeLists.txt
cpp/src/: CMakeLists.txt  phil.cpp  udp.cpp  udp_client.cpp  udp_server.cpp
cpp/src/common/: common.cpp  pcdwriter.cpp  udp.cpp
cpp/src/localization/: ekf.cpp  localization.cpp  mobile_robot.cpp  nonlinearanalyticconditionalgaussianmobile.cpp  particle_filter.cpp  point_mass_robot_model.cpp  robot_model.cpp
cpp/src/main/: main.cpp  phil_kalman_filter.cpp  test_nonlinear_kalman.cpp  tk1.cpp
cpp/src/phil/: phil.cpp
cpp/src/phil_common/: common.cpp  udp.cpp
cpp/src/phil_rio/: phil.cpp  phil_rio.cpp
cpp/src/test/: TestRobotProgram.cpp  unit_tests.cpp
cpp/src/tk1/: tk1.cpp
cpp/tools/: CMakeLists.txt  algorithm.cpp  annotate_video.cpp  aruco_localize_from_mm.cpp  auto_diff_test.cpp  cscore_webcam.cpp  csvReader.cpp  csvReader.h  detect_markers.cpp  detect_markers_in_video.cpp  linux_navx_test.cpp  lkdemo.cpp  localize.cpp  localize.h  localize_from_mm.cpp  localize_to_markermap.cpp  log_polar.cpp  marker_detection_analysis.cpp  marker_mapper_timestamped.cpp  mocap_record.cpp  ntcore_main.cpp  phil_kalman_filter.cpp  play_video_with_cscore.cpp  publish_rio_data.cpp  publish_turtlebot_mocap_data.cpp  record_cameras_on_udp_trigger.cpp  record_frames.cpp  record_imu_calibration_data.cpp  record_tag_positions.cpp  record_video.cpp  test  test_csv_reader.cpp  test_udp_trigger.cpp  test_udp_trigger_tk1.cpp  udp.h  udp_client.cpp  udp_server.cpp  unwarp_fisheye.cpp
docs/: IMU_derivations.tex  README.md
matlab/: acnv.m  chirp_filtering.m  dopplerMatchFilter.m  imu_derivatives.m
psoc_workspace/: psoc_workspace.cywrk
psoc_workspace/First_GPS.cydsn/: CRC.c  CRC.h  CYASK.c  CYASK.h  First_GPS.cydwr  First_GPS.cyprj  First_GPS.rpt  First_GPS.svd  USBTTY.c  USBTTY.h  main.c  main.h
python/: .gitignore  phil.mplstyle
python/misc/: custom_dict.py  fix_rio_logs.py  plot_live_robot_pose.py
python/notebooks/: Field Trip 2 IMU Drift.ipynb  Field Trip 3 IMU.ipynb  Field Trip IMU Drift.ipynb  IMU Calibration.ipynb  IMU Drifting Test.ipynb  IMU_derivations.tex  KF Output Analysis.ipynb  MoCap Data Viz.ipynb  Practice Field Data Analysis.ipynb  State Estimation (Kalman Filters).ipynb  Stationary Calibration.ipynb  Turtlebot Circle Data Viz.ipynb  imu_calibration_data_shortened_test.csv  phil.mplstyle  recorded_sensor_data
python/recorded_data_processing/: analyze_marker_detection.py  analyze_marker_detection_analysis.py  aruco_stat.py  bechmark_markermapper.py  benchmark_aruco_pose_estimate.py  benchmark_markermapper.py  benchmark_yaw_measurements.py  cleanup_detect_markers.py  detect_markers_in_field_data.py  fake_base_frame_rotation.py  fake_imu_data.py  fps_from_timestamps.py  imu_calibration.py  kalman_filter.py  plot_camera_poses.py  plot_from_navx.py  plot_fwd_kinematics.py  plot_imu_encoder_data.py  plot_phil_main_output.py  plot_robot_position_from_mocap.py  preprocess.py  preprocess_tests.py  results1  visualize_interpolated_data.py  visualize_recorded_data.py
recorded_sensor_data/camera_calibration/: 11_12.yml  dorothy_phone.yml  peter_phone.yml  ps3eye.yml  ps3eye_1_calib_3_16.yml
recorded_sensor_data/data_capture_11_02_01-09-00/: interpolated_data.csv
recorded_sensor_data/data_capture_11_02_01:09:00/: README.md  encoder_data.csv  ins_data.csv  interpolated_data.csv  metadata.json  time.txt
recorded_sensor_data/fake_mocap/: frame_time_stamps.csv  mocap_data-206.376.csv
recorded_sensor_data/field_data_2/: .gitattributes  ids_12ft  ids_4.5ft  ids_9ft
recorded_sensor_data/gyroscope_data/: gyroscope_data2.csv
recorded_sensor_data/id_filters/: ids_3ft
recorded_sensor_data/imu_calibration/: calibration.yml  fake_data.csv  imu_12_07_nicolette1.csv  imu_12_07_nicolette2.csv  imu_calibration_data.csv  imu_calibration_data_11_14.csv  imu_calibration_data_12_07_22-28-00.csv  imu_calibration_data_1_28_final.csv  imu_calibration_data_final.csv  imu_calibration_data_unknown.csv
recorded_sensor_data/imu_calibration_11_14_20-00-00/: .~lock.imu_calibration_data_11_14.csv#
recorded_sensor_data/imu_drift_test/: being_static_for_6_mins.csv  dynamic_test_01.csv
recorded_sensor_data/mocap_11_17_18-00-00/: MQP_FRC_Trial 4.csv  mocap_data.csv  sensor_data.csv
recorded_sensor_data/mocap_12_06_04-00-00/: MQP_FRC_Trial_test.csv  extra_points.json  mocap_data.csv  sensor_data.csv
recorded_sensor_data/mocap_12_10-03-30-00/: camera_timestamp_data.csv  extra_points.json  mocap_data.csv  out_12_09_22-31-22.avi  sensor_data.csv
recorded_sensor_data/mocapbot_3_30/: tag_0_pose.csv
recorded_sensor_data/practice_image_processing/: frame_time_stamps.csv  out.avi
recorded_sensor_data/psoc_chirp_data/: psoc_data.csv
recorded_sensor_data/turtlebot_12_07_18-44-00/: turtlebot_data.csv
recorded_sensor_data/turtlebot_12_2_19-19-32/: turtlebot_data.csv
recorded_sensor_data/turtlebot_mocap_2/: rio-data-657.001.csv  rio-data-701.857.csv
recorded_sensor_data/turtlebot_mocap_3_16/: rio-data-107.7.csv  (+6 more)
scripts/: two_cam_pi.sh
(+325 files in other folders)
